--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,11 @@ code {
 .home {
   color: rgb(15, 15, 15) !important;
 }
+.fade-in {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-in.visible {
+  opacity: 1;
+}
